
(executable
  (name driver)
  (libraries camomile)
  (flags (:standard -unsafe-string -warn-error -A)))

(ocamllex lexer)

(menhir
  (modules parser)
  (flags (
         --explain        ; explain conflicts
         --dump           ; describe automaton
         --graph          ; describe the grammar’s dependency graph
         --log-grammar 2
         ))
  (infer true))
